--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-	<p>Welcome {{username}}!</p>
-	<p>you typed {{password}}!</p>
+	<p>Welcome, {{username}}!</p>
+	<!-- <p>you typed {{password}}!</p>
 	<p>with a confirmation of {{vpassword}}!</p>
-	<p>and an email of {{email}}!</p>
+	<p>and an email of {{email}}!</p> -->
 
 {% endblock %}
